<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recipe_image_height"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_recipe"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/recipe_image_height"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:labelFor="@+id/radioDuration"
        android:text="@string/workDuration"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/workDuration"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:max="2"
            android:paddingHorizontal="36dp"
            android:progress="1"
            android:thumb="@drawable/ic_baseline_restaurant_menu_24"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="36dp"
            app:layout_constraintEnd_toEndOf="@+id/workDuration"
            app:layout_constraintStart_toStartOf="@+id/workDuration"
            app:layout_constraintTop_toBottomOf="@+id/workDuration">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workTimeShort"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workTimeMedium"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workTimeLong"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recipe_image_height"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>